# CRTP

./: CMakeLists.txt  README.md  groupBy.h  groupByDistance.cpp  groupByDistance.h  groupByName.cpp  groupByName.h  groupByTime.cpp  groupByTime.h  groupByType.cpp  groupByType.h  main.cpp  readData.cpp  readData.h  writeData.cpp  writeData.h
